--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,8 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Thief.cs" />
+    <Compile Include="Assets\Scripts\Alarm.cs" />
     <Compile Include="Assets\Scripts\Home.cs" />
-    <Compile Include="Assets\Scripts\AlarmSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
